--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,8 @@
 
     <title>PCS Twitter Feed</title>
 
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css' />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.2/css/bootstrap.min.css' />
+    <link rel="stylesheet" href="/css/style.css"/>
     
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -16,14 +17,14 @@
 
     <script>
 			var pubnub = PUBNUB.init({
-        subscribe_key: 'sub-c-4b92c960-64e5-11e8-b753-ce5efc28367f',
+        subscribe_key: 'sub-c-a87b7852-6521-11e8-902b-b2b3cb3accda',
         ssl: true
 			});
 			pubnub.subscribe({
-				channel : 'pasco-tweets',
+				channel : 'rugby-tweets',
 				message : function(tweet){
-                    $('#tweet-list').prepend('<li class="list-group-item"><img src="'+ tweet.user.profile_image_url + '">' 
-                        + '   ' + '<h4 class="twitter-name">' + tweet.user.name +  '</h4>   ' + tweet.text + '</li>');
+                    $('#tweet-list').prepend('<li id="tweet-list-item" class="list-group-item card"><img class="card-img-top" src="'+ tweet.user.profile_image_url + '">' 
+                        + '   ' + '<h3 class="card-title">' + tweet.user.name +  '</h3><div class="card-body"><p class="card-text">   ' + tweet.text + '</p></div></li>');
                     
 					
 				}
@@ -31,25 +32,25 @@
     </script>
 
   </head>
-  <body role="document">
 
-    <div class="container" role="main" style="margin-top: 20px;">
-    	<div class="panel panel-primary">
-			  <div class="panel-heading">#PascoLead 2018 Twitter Stream</div>
-			  <div class="panel-body">
-                  <div class="jumbotron text-center">
-                      <h2>Welcome to the Pasco County Schools Leadership Kickoff 2018</h2>
-                      <h4>Join in by using twitter #PascoLead</h4>
-                    </div>
-			  	
+  <body>
+    <div class="container">
+      <header class="header">
+        <div class="row">
+          <img class="logo" src="/img/pasco_logo_circle.png">
+          <h3 class="title">#PascoLead 2018 Twitter Stream </h3>
+        </div>
+      </header>
+        <div class="jumbotron">
+          <h2 class="jumbo-lead">Welcome to Pasco County Schools Leadership Kickoff 2018</h2>
+        </div>
 
-			  </div>
-			  <ul id="tweet-list" class="list-group">
-			    <li class="list-group-item">Waiting for Tweets . . .</li>
-              </ul>
-              
-			</div>
+        <ul id="tweet-list" class="list-group">
+          <li id="tweet-list-item" class="list-group-item">Waiting for tweets</li>
+        </ul>
+      
     </div>
 
   </body>
+ 
 </html>
